--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,74 @@ Fonts
 /**************************
 Typography
 **************************/
+html { 
+    font-size: 18px;
+}
+body {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 400;
+    font-size: 1em;
+    line-height: 1;
+    text-rendering: optimizeLegibility;
+}
+h1 {
+    font-size: 80px;
+    line-height: 80px;
+}
+h2 {
+    font-size: 45px;
+    line-height: 54px;
+}
+h3 {
+    font-size: 26px;
+    line-height: 30px;
+}
+h4 {
+    font-size: 25px;
+    line-height: 30px;
+}
+h5 {
+    font-size: 16px;
+    line-height: 54px;
+}
+h6 {
+    font-size: 12px;
+    line-height: 54px;;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+     font-weight: 400;
+     font-family: 'Fjalla One', sans-serif;
+}
+h1:first-child,
+h2:first-child,
+h3:first-child,
+h4:first-child,
+h5:first-child
+h6:first-child {
+  padding-top: 0;
+  margin-top: 0; 
+}
+
+p {
+    color: #000;
+    line-height: 26px;
+    margin-bottom: 25px;
+}
 
 /**************************
-LISTS
+Lists
 **************************/
 
 /**************************
-LINKS
+Links
 **************************/
 
 /**************************
@@ -28,7 +89,183 @@ Media
 /**************************
 General
 **************************/
+:root {
+    --primary-color: #FC7E08;
+    --secondary-color: #303030;
+    --terteary-colo: #CCCCCC;
+    --quaternary-color: #868686;
+    --quinary-color: #B2B2B2;
+    --senary-color: ;
+    --septenary-color: ;
 
+    --color-white: #FFF;
+    --color-black: #000;
+
+    --primary-shadow: 0px 10px 30px rgba(0, 0, 0, 0.10);
+
+    --primary-font: 'Fjalla One', sans-serif;
+    --secondary-font: 'Ubuntu', sans-serif;
+}
+
+/* card holytrails */
+.card-holytrails {
+    box-shadow: var(--primary-shadow);
+    padding: 38px 46px;
+    position: relative;
+    border-radius: 15px;
+}
+.card-holytrails i {
+    font-size: 34px;
+    color: var(--primary-color);
+    cursor: pointer;
+    position: absolute;
+    bottom: 34px;
+    left: 50%;
+    transform: translate(-50%);
+    transition: all .2s;
+}
+.card-holytrails.active i {
+    transform: rotate(180deg);
+    transform-origin: center center;
+}
+.card-holytrails em {
+    font-family: var(--primary-font);
+    color: var(--primary-color);
+    font-size: 20px;
+    font-style: normal;
+}
+.card-holytrails .card-holytrails-left strong {
+    font-family: var(--primary-font);
+    font-size: 20px;
+    text-transform: uppercase;
+    color: var(--quaternary-color);
+    font-weight: 400;
+} 
+.card-holytrails .card-holytrails-left h2 {
+    text-transform: Capitalize;
+    font-size: 40px;
+    max-width: 249px;
+}
+.card-holytrails .card-holytrails-right strong {
+    font-family: var(--primary-font);
+    font-size: 30px;
+    color: var(--quaternary-color);
+}
+.card-holytrails .card-holytrails-right h2 {
+    color: var(--primary-color);
+}
+
+.card-holytrails-bottom {
+    margin-top: 45px;
+    padding-top: 45px;
+    position: relative;
+}
+.card-holytrails-bottom:after {
+    content:"";
+    display: inline-block;
+    max-width: 568px;
+    width: 100%;
+    height: 2px;
+    background-color: #F0F0F0;
+    position: absolute;
+    top:0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+/* btn card */
+.btn-card {
+    font-family: var(--primary-font);
+    display: inline-block;
+    text-transform: uppercase;
+    padding: 11px 31px;
+    color: var(--color-white);
+    background-color: var(--primary-color);
+    margin-top: 10px;
+
+}
+
+/* title primary */
+.main-title {
+    background-color: var(--primary-color);
+}
+.title {
+    height: 254px;
+    text-align: center;
+}
+.title h2 {
+    font-size: 70px;
+    line-height: 78px;
+    color: var(--color-white);
+    margin-bottom: 42px;
+    position: relative;
+}
+.title h2:after {
+    content: "";
+    display: inline-block;
+    width: 130px;
+    height: 10px;
+    background-color: var(--secondary-color);
+    position: absolute;
+    bottom: -25px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.title span {
+    font-family: var(--primary-font);
+    font-size: 30px;
+    color: var(--color-white);
+}
+.main-title.title-secondary {
+    background-color: var(--secondary-color);
+}
+.main-title.title-secondary .title h2:after {
+    background-color: var(--primary-color);
+}
+.main-title.title-terteary {
+    background-color: transparent;
+}
+.main-title.title-terteary .title h2,
+.main-title.title-terteary .title span {
+    color: var(--color-black);
+}
+.main-title.title-terteary .title h2:after {
+    background-color: var(--primary-color);
+}
+
+/* main tabs */
+.nav-pills {
+    border-bottom: 1px solid var(--quinary-color);
+}
+.nav-pills .nav-link {
+    font-size: 17px;
+    color: #CCCCCC;
+    text-transform: uppercase;
+    border-width: 1px;
+    border-style: solid;
+    border-color: var(--quinary-color) var(--quinary-color) transparent;
+    border-radius: .25rem .25rem 0 0;
+    padding: 16px 43px;
+}
+.nav-pills .nav-link.active {
+    color: var(--primary-color);
+    background-color: var(--color-white);
+}
+.nav-pills .nav-item {
+    margin-bottom: -1px;
+}
+.nav-pills .nav-item:not(:last-child) {
+    margin-right: 10px;
+}
+.nav-pills .nav-item:first-child {
+    margin-left: 75px;
+}
+.tab-content>.tab-pane {
+    padding: 57px;
+    color: var(--secondary-color);
+    line-height: 28px;
+    font-weight: 300;
+}
 /**************************
 Style
 **************************/
@@ -69,7 +306,7 @@ Style
 }
 
 .menu-fullscreen .menu-principal li a {
-    color: #fff;
+    color: var(--color-white);
     font-size: 50px;
     font-weight: bold;
     -webkit-transition: all .3s;
@@ -104,7 +341,7 @@ Style
     -o-transition: all .3s;
     transition: all .3s;
 
-    background-color: #000;
+    background-color: var(--color-black);
 }
 .navegation-top img {
     height: 30px;
@@ -140,7 +377,7 @@ Style
     width: 100%;
     height: 4px;
     margin: 3px 0;
-    background-color: #fff;
+    background-color: var(--color-white);
     -webkit-transition-duration: .3s;
     -o-transition-duration: .3s;
     transition-duration: .3s;
@@ -181,6 +418,34 @@ Style
 }
 
 /**************************
-Keyframes
+Media queries
 ***************************/
+@media screen and (max-width: 768px) {
+    .card-holytrails-left:after {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 575px) {
+    .card-holytrails .card-holytrails-left h2 {
+        max-width: initial;
+    }
+    .card-holytrails-left {
+        padding-bottom: 23px;
+        margin-bottom: 18px;
+        position: relative;
+    }
+    .card-holytrails-left:after {
+        content: "";
+        display: inline-block;
+        max-width: 330px;
+        width: 100%;
+        height: 2px;
+        background-color: #F0F0F0;
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+}
 
